just some things

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Welcome to Oasis resort  - A perfect getaway for relaxation and adventure!">
 <meta name="author" content="">
 <link rel="canonical" href="//localhost:1313/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.37d4315cd044359a989035ee2786229d3c1e649c0739f6b379d491ad14612225.css" integrity="sha256-N9QxXNBENZqYkDXuJ4YinTweZJwHOfazedSRrRRhIiU=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.87f9af727410b2ec994fe4dd8c0f413d8e3870a72c97bcab80db8e0bf0770d24.css" integrity="sha256-h/mvcnQQsuyZT&#43;TdjA9BPY44cKcsl7yrgNuOC/B3DSQ=" rel="preload stylesheet" as="style">
 <link rel="icon" href="//localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
@@ -171,6 +171,7 @@
     })
 
 </script>
+
 </body>
 
 </html>
