--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="Насладете се на перфектния семейен отдих в нашия комплекс, който предлага уютни бунгала, частен зоопарк и очарователна ферма.">
 <meta name="author" content="">
 <link rel="canonical" href="//localhost:1313/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.37d4315cd044359a989035ee2786229d3c1e649c0739f6b379d491ad14612225.css" integrity="sha256-N9QxXNBENZqYkDXuJ4YinTweZJwHOfazedSRrRRhIiU=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.87f9af727410b2ec994fe4dd8c0f413d8e3870a72c97bcab80db8e0bf0770d24.css" integrity="sha256-h/mvcnQQsuyZT&#43;TdjA9BPY44cKcsl7yrgNuOC/B3DSQ=" rel="preload stylesheet" as="style">
 <link rel="icon" href="//localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
@@ -128,7 +128,29 @@
 <h2 id="нашият-курорт">Нашият курорт<a hidden class="anchor" aria-hidden="true" href="#нашият-курорт">#</a></h2>
 <h3 id="уютни-бунгала">Уютни бунгала<a hidden class="anchor" aria-hidden="true" href="#уютни-бунгала">#</a></h3>
 <p><img alt="Бунгала" loading="lazy" src="/images/Hero.webp">
-Нашият курорт разполага с <strong>7 просторни бунгала</strong>, всяко от които е проектирано да подслони удобно <strong>4-5 души</strong>. Идеални за двойка с 2-3 деца, нашите бунгала предлагат:</p>
+Нашият курорт разполага с <strong>7 просторни бунгала</strong>, всяко от които е проектирано да подслони удобно <strong>4-5 души</strong>. Идеални за двойка с 2-3 деца, нашите бунгала предлагат:
+<div class="photo-grid">
+    
+  <img src="/images/terace.webp" alt="Тераса">
+  <img src="/images/bed.webp" alt="Патагонска мара">
+  <img src="/images/twobed.webp" alt="Кози">
+
+  </div></p>
+<hr>
+<h2 id="title-my-gallery">title: &ldquo;My Gallery&rdquo;<a hidden class="anchor" aria-hidden="true" href="#title-my-gallery">#</a></h2>
+<div class="gallery-container">
+    <div class="gallery">
+      <div class="gallery-item">
+        <img src="/images/bungalow.webp" alt="Image 1">
+      </div>
+      <div class="gallery-item">
+        <img src="/images/bedview.webp" alt="Image 2">
+      </div>
+      <div class="gallery-item">
+        <img src="/images/gallery/image3.jpg" alt="Image 3">
+      </div>
+    </div>
+  </div>
 <ul>
 <li><strong>Частни тераси</strong> с прекрасна гледка</li>
 <li><strong>Напълно оборудвани кухни</strong> за ваше удобство</li>
@@ -221,6 +243,7 @@
     })
 
 </script>
+
 </body>
 
 </html>
